# mu-family

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Issues.md  LICENSE  README.md  THIRD_PARTY_NOTICES.txt  ToDo.md  backlog.md  mu.code-workspace  tests.md
docs/: design.md  (+17 more)
mu-clid/: CLAUDE.md  CMakeLists.txt
mu-clid/Source/: BuildNumber.h
mu-clid/Source/License/: LicenseChecker.h  LicenseKey.h
mu-clid/Source/Modulation/: ModulationDestinations.h  ModulationSnapshot.h  MuClidModDest.h
mu-clid/Source/Persistence/: MidiFullPresetMap.cpp  MidiFullPresetMap.h  MidiPresetMap.cpp  ModulatorSerialise.h  PresetHelpers.h  PresetMigrations.cpp  PresetMigrations.h  RhythmParamTable.h  ScopedApvtsLoading.h
mu-clid/Source/Plugin/: HotSwapBoundary.h  HotSwapStager.cpp  HotSwapStager.h  LiteEditor.cpp  LiteEditor.h  MidiClockSync.h  ModulationSkew.h  MuLinkBridge.cpp  MuLinkBridge.h  MuLinkPlayHead.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_APVTS.cpp  PresetIO.cpp  PresetIO.h  PresetIO_HostState.cpp  RenderMode.cpp  RenderMode.h  SamplePreview.cpp  SamplePreview.h  StandaloneApp.cpp
mu-clid/Source/Sequencer/: EuclideanGenerator.cpp  HitGenerator.cpp  HitGenerator.h  Rhythm.h  SequencerEngine.cpp  SequencerEngine.h
mu-clid/Source/Tests/: AlgorithmNameTableTests.cpp  ApvtsLayoutTests.cpp  FilterDSPSmokeTests.cpp  GlobalParamDefsTests.cpp  HitGeneratorTests.cpp  HotSwapBoundaryTests.cpp  InsertAlgoTableTests.cpp  InsertDSPSmokeTests.cpp  KindedPropertyRoundTripTests.cpp  MidiFullPresetMapTests.cpp  ModulationMatrixTests.cpp  ModulationSkewTests.cpp  ModulatorSerialiseTests.cpp  PresetMigrationTests.cpp  PresetXMLRoundTripTests.cpp  RhythmParamBoundaryTests.cpp  RhythmParamRoundTripTests.cpp  SendFXSmokeTests.cpp  TestMain.cpp  UIScalingConsistencyTests.cpp
mu-clid/Source/UI/: AboutPanel.h  EuclideanPanel.cpp  EuclideanPanel.h  MasterLoopSection.cpp  MasterLoopSection.h  MidiFullPresetsPanel.cpp  MidiFullPresetsPanel.h  MidiPresetsPanel.cpp  MidiPresetsPanel.h  ModMatrixPanel.h  ModulatorEditor.cpp  ModulatorEditor.h  ModulatorPanel.cpp  ModulatorPanel.h  PresetBrowser.h  RhythmCircle.cpp  RhythmCircle.h  RhythmMiniVisual.cpp  RhythmMiniVisual.h  RhythmPanel.cpp  RhythmPanel.h  RhythmSidebar.cpp  RhythmSidebar.h  SampleBrowser.cpp  SampleBrowser.h  SaveDialog.cpp  SaveDialog.h  SettingsOverlay.cpp  SettingsOverlay.h  SidebarItem.h  TransportBar.cpp  TransportBar.h  VoiceSection.cpp  VoiceSection.h
mu-clid/installer/: mu-Clid-Lite.iss  mu-Clid.iss
mu-clid/resources/: versioninfo-lite.rc.in  versioninfo.rc.in
mu-core/: BuildNumber.h  CMakeLists.txt  MuLimits.h
mu-core/Audio/: AlgorithmNames.h  InsertProcessor.cpp  InsertProcessor.h  InsertSlotConfig.h  MidiOutputEngine.h  MixerEngine.cpp  MixerEngine.h  MultiModeFilter.cpp  MultiModeFilter.h  SamplePlayer.cpp  TimeStretcherBase.h  VoiceEngine.cpp  VoiceEngine.h  VoiceParams.h
mu-core/Audio/Filters/: Bp12Filter.h  Bp24Filter.h  CombMinusFilter.h  CombPlusFilter.h  FilterAlgorithmBase.h  Hp12Filter.h  Hp24Filter.h  LowShelfFilter.h  Lp12Filter.h  Lp24Filter.h  Lp6Filter.h  Notch12Filter.h  Notch24Filter.h
mu-core/License/: ActivationStore.h  LemonSqueezyClient.cpp  LemonSqueezyClient.h  LicenseCanonical.h  LicenseManager.cpp  LicenseManager.h  MachineFingerprint.h  OnlineActivation.cpp  OnlineActivation.h
mu-core/Link/: AudioRing.h  MuLinkBridge.h  MuLinkClient.h  MuLinkPlayHead.h  MuLinkProtocol.h  MuLinkSharedMemory.h  MuLinkStandalone.h
mu-core/Modulation/: LaneModulation.h  ModulationAssignment.h  ModulationDestinations.h  ModulationMatrix.cpp  ModulationMatrix.h  ModulationSnapshot.h  ModulatorSerialise.h
mu-core/Persistence/: MidiFullPresetMap.cpp  MidiFullPresetMap.h  MidiPresetMap.cpp  MidiPresetMap.h
mu-core/Plugin/: HostTransport.h  MidiClockSync.h  MixerFxParams.h  ProcessorBase.cpp  ProcessorBase.h  RenderMode.cpp  RenderSupport.h  StandaloneShell.h
mu-core/Sequencer/: ControlSequence.cpp  ControlSequence.h  VoiceSlot.h
mu-core/UI/: AboutPanel.cpp  AboutPanel.h  ActivationPanel.cpp  ActivationPanel.h  ChannelHeaderBar.cpp  ChannelHeaderBar.h  ChannelSidebar.cpp  ChannelSidebar.h  ConfirmDialog.h  DelayRow.cpp  DelayRow.h  EditorShellBase.cpp  EditorShellBase.h  FXRow.cpp  FXRow.h  InsertSlotUi.h  MasterLoopSection.cpp  MasterLoopSection.h  MidiFullPresetsPanel.cpp  MidiFullPresetsPanel.h  MidiPresetsPanel.cpp  MidiPresetsPanel.h  MixerChannel.cpp  MixerChannel.h  MixerChannel_Bindings.cpp  MixerChannel_Insert.cpp  MixerOverlay.cpp  MixerOverlay.h  ModMatrixPanel.cpp  ModMatrixPanel.h  ModalCard.h  ModalDialog.cpp  ModalDialog.h  ModulatorEditor.cpp  ModulatorEditor.h  ModulatorPanel.cpp  ModulatorPanel.h  OverlayHost.h  ParamKnobGrid.cpp  ParamKnobGrid.h  (+10 more)
mu-core/UI/Components/: AddButton.cpp  AddButton.h  BipolarSliderRow.cpp  BipolarSliderRow.h  DropdownSelect.cpp  DropdownSelect.h  GRMeter.h  KnobWithLabel.cpp  KnobWithLabel.h  LFOEditor.cpp  LFOEditor.h  MuLookAndFeel.cpp  MuLookAndFeel.h  MuTheme.h  NudgeInput.cpp  NudgeInput.h  SegmentControl.cpp  SegmentControl.h  StatusBar.cpp  StatusBar.h  StepEditor.cpp  StepEditor.h  VUMeter.cpp  VUMeter.h
mu-core/UI/Voice/: InsertSubsection.cpp  InsertSubsection.h
mu-link/: CLAUDE.md  CMakeLists.txt
mu-link/Source/Clock/: MidiClockEstimator.h  MidiClockInput.h  MidiClockOut.h  TransportClock.h
mu-link/Source/Ipc/: AudioRing.h  MuLinkProtocol.h  MuLinkServerMemory.h
mu-link/Source/Plugin/: Main.cpp
mu-link/Source/Server/: AudioServer.h  ServerEngine.h  ServerMain.cpp
mu-link/Source/Tests/: ClientTests.cpp  IpcTests.cpp  ServerTests.cpp  SharedMemoryTests.cpp  ShmTestVectors.h  TestMain.cpp
mu-link/Source/Tools/: HarnessMain.cpp  ToneClientMain.cpp
mu-link/Source/UI/: MuLinkComponent.cpp  MuLinkComponent.h
mu-link/scripts/: verify-bus.ps1
mu-on/: CLAUDE.md  CMakeLists.txt
mu-tant/: CLAUDE.md  CMakeLists.txt
mu-tant/resources/: versioninfo.rc.in
mu-tant/tools/: gen_factory_presets.py  validate_presets.py
mu-toni/: CLAUDE.md  CMakeLists.txt
tools/license-tool/: CMakeLists.txt
(+467 files in other folders)
